<resources>
    <string name="app_name">Task Manager</string>
    <string name="loginTitle">Task Manager</string>
    <string name="email">Email</string>
    <string name="password">Digite a senha</string>
    <string name="submit">Login</string>
    <string name="forgotPassword">Esqueci minha senha</string>
    <string name="register">Criar nova conta</string>
    <string name="forgotPasswordTitle">Esqueci a senha</string>
    <string name="submitForgotPassword">Recuperar senha</string>
    <string name="registerTitle">Registrar</string>
    <string name="confirmPassword">Confirme a senha</string>
    <string name="submitRegister">Criar conta</string>
    <string name="home">Início</string>
    <string name="save">Salvar</string>
    <string name="profile">Perfil</string>
    <string name="username">Usuário</string>
    <string name="name">Nome</string>
    <string name="tittleInput">Título</string>
    <string name="description">Descrição</string>
    <string name="task">Tarefa</string>
    <string name="password_empty">Senha limpa</string>
    <string name="password_very_weak">Senha muito fraca</string>
    <string name="password_weak">Senha fraca</string>
    <string name="password_normal">Senha normal</string>
    <string name="password_strong">Senha forte</string>
    <string name="password_very_strong">Senha muito forte</string>

    <string name="loading_informations">Carregrando informações...</string>
    <string name="error_loading_tasks">Erro ao carregar as tarefas.</string>
    <string name="title_delete_task">Excluir tarefa?</string>
    <string name="message_delete_task">Confirma a exclusão da tarefa?</string>
    <string name="confirm">Confirmar</string>
    <string name="task_deleted">Tarefa excluída</string>
    <string name="cancel">Cancelar</string>
    <string name="error_loading_task">Erro ao carregar a tarefa</string>
    <string name="task_edited">Tarefa atualizada</string>
    <string name="error_task_edited">Erro ao atualizar a tarefa.</string>
    <string name="task_saved">Tarefa salva</string>
    <string name="permission_granted">Permissão concedida</string>
    <string name="permission_refused">Permissão negada</string>
    <string name="error_to_capture_image">Erro ao capturar a imagem</string>
    <string name="phone">Telefone</string>
    <string name="profile_updated">Perfil atualizado</string>
    <string name="or">ou</string>
    <string name="submit_login_with_google_btn">Logar com </string>
    <string name="default_web_client_id">194632531933-g10oemm56ppk2d6rvu6jr3c5b0210dvu.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="requiredEmail">O campo de e-mail é obrigatório.</string>
    <string name="invalidEmail">E-mail inválido.</string>
    <string name="pendding_profile">Os campos em branco estão pendentes de atualização</string>
    <string name="profile_update_error">Falha ao salvar o perfil</string>
    <string name="image_updated">Imagem salva no perfil</string>
    <string name="imagem_update_error">Falha ao salvar a imagem do perfil</string>
    <string name="image_loaded">Imagem carregada.</string>
    <string name="error_loading_image">Erro ao carregar imagem</string>
</resources>