<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/task">
            <ImageView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logout_24"
                android:layout_gravity="right"
                android:padding="16dp"/>
            <ImageView
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/profile_24"
                android:layout_gravity="right"
                android:padding="16dp"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/body_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8sp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <EditText
            android:id="@+id/tittle_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tittleInput"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:layout_margin="16dp"/>
        <EditText
            android:id="@+id/description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:layout_margin="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8sp"
        app:layout_constraintEnd_toEndOf="@id/body_title"
        app:layout_constraintStart_toStartOf="@id/body_title"
        app:layout_constraintTop_toBottomOf="@id/body_title"
        >
        <EditText
            android:id="@+id/date_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="Data"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:layout_margin="16dp"/>
        <ImageView
            android:id="@+id/date_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/date_24"
            android:layout_gravity="right"
            android:padding="16dp"
            android:layout_marginTop="-70dp"
            android:layout_marginRight="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8sp"
        app:layout_constraintEnd_toEndOf="@id/date_picker"
        app:layout_constraintStart_toStartOf="@id/date_picker"
        app:layout_constraintTop_toBottomOf="@id/date_picker">
        <EditText
            android:id="@+id/time_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="Hora"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:layout_margin="16dp"/>
        <ImageView
            android:id="@+id/time_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/time_24"
            android:layout_gravity="right"
            android:padding="16dp"
            android:layout_marginTop="-70dp"
            android:layout_marginRight="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/save_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintStart_toStartOf="@id/time_picker"
        app:layout_constraintTop_toBottomOf="@id/time_picker">
        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:padding="10dp"
            android:layout_marginHorizontal="36dp"
            android:textSize="20dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>